<resources>
    <string name="app_name">Neo-Alexandria-App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_it">Search it!</string>
    <string name="go_to_source"><u>go to source</u></string>
    <string name="log_out"><u>Log out</u></string>
    <string name="all">All</string>
    <string name="books">Books</string>
    <string name="songs">Songs</string>
    <string name="update_it">Update it</string>
</resources>