<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:transitionName="logoImageTrans"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-100dp"
        android:fontFamily="@font/redressed"
        android:text="Neo Alexandria"
        android:transitionName="textTrans"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:id="@+id/tiEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogo"
        android:layout_marginTop="40dp"
        app:startIconDrawable="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:background="@drawable/custom_edittext">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:id="@+id/tiPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiEmail"
        android:layout_marginTop="30dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:background="@drawable/custom_edittext">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="10sp"
            android:paddingStart="10sp"
            android:textSize="15sp"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvforgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="210dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvdonthavepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_below="@+id/tvforgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/stripeLeft"
        android:layout_width="150dp"
        android:layout_height="1.5dp"
        android:layout_below="@+id/btnLogin"
        android:layout_toStartOf="@+id/tvOr"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:id="@+id/stripeRight"
        android:layout_width="150dp"
        android:layout_height="1.5dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/tvOr"
        android:layout_marginStart="20dp"
        android:background="@android:color/black" />
</RelativeLayout>