<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        app:srcCompat="@drawable/logo"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivlogo"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/redressed"
        android:text="Neo Alexandria"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/email"
        android:padding="10sp"
        android:paddingStart="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/username"
        android:padding="10sp"
        android:paddingStart="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:paddingStart="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tvLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/placeholderprofile" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="408dp"
        app:srcCompat="@drawable/add" />
</RelativeLayout>